Fixed issues reported by SonarLint